Fix broken CSS

--- a/public/css/basics.css
+++ b/public/css/basics.css
@@ -44,7 +44,7 @@ body {
 	background-size: cover;
 	background-image: url('/images/vanda.jpg');
 	background-repeat: repeat;
-	transform: all 2s ease-in-out;
+	transition: all 2s ease-in-out;
 	display: grid;
 	height: 100%; 
 	width: 100%;
